--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The UI5 walkthrough application",
   "scripts": {
-    "start": "ui5 serve -o test/mockServer.html"
+    "start": "ui5 serve -o test/integration/opaTests.qunit.html"
   },
   "devDependencies": {
     "@ui5/cli": "^4.0.3",
